fix: scrollbar width size changed to vw

--- a/apps/spain-tour-landing/src/styles/base.scss
+++ b/apps/spain-tour-landing/src/styles/base.scss
@@ -49,7 +49,7 @@ a:hover * {
 /* Scroll bar */
 /* width */
 ::-webkit-scrollbar {
-  width: 16px;
+  width: .8vw;
 }
 
 /* Track */
